--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webdev",
-  "homepage": "https://ashwinferolic.github.io/webdev",
+  "homepage": "https://manoj-72.github.io/webdev",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
